--- a/ANGULAR_buku/src/app/admin/admin.component.html
+++ b/ANGULAR_buku/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<body class="sb-nav-fixed">
+<div class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
@@ -128,3 +128,4 @@
             </footer>
         </div>
     </div>
+</div>
